--- a/src/lib/css/system.css
+++ b/src/lib/css/system.css
@@ -138,7 +138,7 @@
 @theme {
   /* Color */
   --main-bg: rgba(2, 2, 2, 1);
-  --main-primary: rgba(255, 255, 255, 0.05);
+  --main-primary: #1c1c1c;
   --main-dark: rgba(10, 12, 19, 1);
   --main-cardbg: rgba(255, 255, 255, 0.03);
   --main-cardsub: rgba(16, 10, 26, 1);
