--- a/src/lib/css/system.css
+++ b/src/lib/css/system.css
@@ -142,7 +142,7 @@
   --main-dark: rgba(10, 12, 19, 1);
   --main-cardbg: rgba(255, 255, 255, 0.03);
   --main-cardsub: rgba(16, 10, 26, 1);
-  --main-light: white;
+  --main-light: rgba(250, 250, 250, 1);
   --main-subtext: rgba(255, 255, 255, 0.55);
   --main-stroke: rgba(255, 255, 255, 0.04);
   --main-stroke-hover: rgba(255, 255, 255, 0.2);
@@ -174,9 +174,9 @@ html,
 body {
   font-family: "Satoshi", sans-serif;
   font-weight: 400;
-  font-size: 1rem;
+  font-size: 0.9rem;
   background-color: var(--main-bg);
-  color: white;
+  color: var(--main-light);
 }
 ::-webkit-scrollbar {
   width: 0;
