--- a/src/lib/css/system.css
+++ b/src/lib/css/system.css
@@ -213,6 +213,7 @@ video,
 canvas,
 svg {
   max-width: 100%;
+  max-height: 100%;
 }
 
 button {
@@ -259,5 +260,5 @@ img {
 }
 
 .cds--cc--chart-wrapper .stroke-1-1-1 {
-  stroke: #23fed9 !important;
+  stroke: rgba(35, 254, 217, 1) !important;
 }
