--- a/src/lib/css/system.css
+++ b/src/lib/css/system.css
@@ -258,3 +258,11 @@ img {
 .cds--cc--chart-wrapper .stroke-1-1-1 {
   stroke: rgba(35, 254, 217, 1) !important;
 }
+
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  select,
+  textarea,
+  input {
+    font-size: 16px;
+  }
+}
