--- a/src/lib/css/system.css
+++ b/src/lib/css/system.css
@@ -259,9 +259,7 @@ img {
   stroke: rgba(35, 254, 217, 1) !important;
 }
 
-@media screen and (-webkit-min-device-pixel-ratio: 0) {
-  select,
-  textarea,
+@supports (-webkit-overflow-scrolling: touch) {
   input {
     font-size: 16px;
   }
